# CodeReview

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  Pipfile  README.md  docker-compose.prod.yml  docker-compose.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: linter_workflow.yml
src/code_review__balancer/: nginx.conf
src/code_review__web/: entrypoint.sh  manage.py  requirements.txt
src/code_review__web/accounts/: apps.py  forms.py
src/code_review__web/code_review__app/: admin.py  apps.py  config.py  forms.py  models.py  models_managers.py  urls.py  views.py
src/code_review__web/code_review__app/migrations/: 0001_initial.py  0002_alter_file_file_data_alter_filelog_fk_file.py
src/code_review__web/code_review__users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/code_review__web/code_review__users/custom_auth_backend/: email_auth_backend.py
src/code_review__web/code_review__users/migrations/: 0001_initial.py
src/code_review__web/code_review_project/: asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
src/code_review__web/code_review_project/epylint/: __test__.py  file_for_test.py
src/code_review__web/code_review_project/utils/: console_file_lint_runner.py
src/code_review__web/static/app/css/: style-login.css  style.css
src/code_review__web/templates/: add_file.html  base.html  delete_file.html  details_file.html  edit_file.html  health-check.html  index.html  login.html  sign_up.html
src/code_review__web/templates/account/: login.html  logout.html  password_change.html  signup.html
srv/code-review--balancer/: Dockerfile
srv/code-review--db/: Dockerfile
srv/code-review--web/: Dockerfile
